finish with header

--- a/index.html
+++ b/index.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AyitiPAm |Tourisme</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <title>My project |Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            Ayiti<span>Pam</span>
+        <div class="sub-header">
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="right-links">
+                <ul>
+                    <li><a href="#">Header link one</a></li>
+                    <li><a href="#">Header link two</a></li>
+                    <li><a href="#">Header link three</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="left-links">
-            <ul>
-                <li><a href="#">Header link one</a></li>
-                <li><a href="#">Header link two</a></li>
-                <li><a href="#">Header link three</a></li>
-            </ul>
+        
+        <div class="more">
+            <div class="left-more">
+                <h1>This website is awasome!</h1>
+                <p>Possimus maxime dolor ullam. Itaque architecto blanditiis perferendis earum inventore, veniam explicabo voluptate illum? Eos quos, unde voluptatibus neque illo minima obcaecati!</p>
+                <button><a href="#">Sign up</a></button>
+            </div>
+            <div class="right-more">
+                <img src="IMAGES/premium_photo-1691414363231-836e2e1bf0ed.avif" alt="grab-hecq1tXiqwc-unsplash" >
+            </div>
         </div>
     </header>
     <footer>
