finish with information section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--header section-->
     <header class="header">
         <div class="sub-header">
             <div class="logo">
@@ -33,6 +34,28 @@
             </div>
         </div>
     </header>
+    <!--Information section-->
+    <div class="information">
+        <h1>Some random information.</h1>
+        <div class="container">
+            <div class="box">
+                <img src="IMAGES/téléchargement.jpeg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+            </div>
+            <div class="box">
+                <img src="IMAGES/téléchargement (1).jpeg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+            </div>
+            <div class="box">
+                <img src="IMAGES/téléchargement (2).jpeg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+            </div>
+            <div class="box">
+                <img src="IMAGES/images.jpeg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+            </div>
+        </div>
+    </div>
     <footer>
 
     </footer>
