--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <title>My project |Home</title>
+    <title>ZileAyiti |Akey</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="IMAGES/palmier.png" type="image/x-icon">
 </head>
 <body>
     <!--header section-->
     <header class="header">
         <div class="sub-header">
             <div class="logo">
-                Header Logo
+                <img src="IMAGES/palmier.png" alt="">
+                Zile<span>Ayiti</span>
             </div>
             <div class="right-links">
                 <ul>
@@ -30,7 +32,7 @@
                 <button><a href="#">Sign up</a></button>
             </div>
             <div class="right-more">
-                <img src="IMAGES/premium_photo-1691414363231-836e2e1bf0ed.avif" alt="grab-hecq1tXiqwc-unsplash" >
+                <img src="IMAGES/citadelle.webp" alt="citadelle" >
             </div>
         </div>
     </header>
