--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <title>ZileAyiti |Akey</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="IMAGES/palmier.png" type="image/x-icon">
+    <link rel="shortcut icon" href="IMAGES/palmier.png" type="image/png">
 </head>
 <body>
     <!--header section-->
@@ -56,6 +56,12 @@
                 <img src="IMAGES/images.jpeg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
             </div>
+        </div>
+    </div>
+    <!--thinking section-->
+    <div class="quote">
+        <div class="text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisiLorem ipsum dolor sit amet consectetur adipisicing elit.cing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eius voluptatem aperiam vel dolorum aut!</p>
         </div>
     </div>
     <footer>
