finish with thinking section

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <title>ZileAyiti |Akey</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="IMAGES/palmier.png" type="image/png">
 </head>
 <body>
     <!--header section-->
     <header class="header">
         <div class="sub-header">
             <div class="logo">
-                <img src="IMAGES/palmier.png" alt="">
+                <img src="palmier-removebg-preview.png" alt="">
                 Zile<span>Ayiti</span>
             </div>
             <div class="right-links">
@@ -42,30 +41,39 @@
         <div class="container">
             <div class="box">
                 <img src="IMAGES/téléchargement.jpeg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+                <p>Haiti beach 1</p>
             </div>
             <div class="box">
                 <img src="IMAGES/téléchargement (1).jpeg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+                <p>Haiti beach 2</p>
             </div>
             <div class="box">
                 <img src="IMAGES/téléchargement (2).jpeg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+                <p>Haiti city</p>
             </div>
             <div class="box">
                 <img src="IMAGES/images.jpeg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sapiente pariatur vel corrupti sed natus?</p>
+                <p>Haiti Palace of Sans-Souci</p>
             </div>
         </div>
     </div>
     <!--thinking section-->
     <div class="quote">
-        <div class="text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisiLorem ipsum dolor sit amet consectetur adipisicing elit.cing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eius voluptatem aperiam vel dolorum aut!</p>
-        </div>
+        <p>
+            He managed to tell them that it was Haiti and not Tahiti.
+            , that this country did exist, it was the former French colony
+            of Santo Domingo. He had earned his right to exist in
+            beat veterans of the Napoleonic army,
+            led by the First Consul's own brother-in-law,
+            then the son Rochambeau, veteran under the orders
+            of his father during the American War of Independence.
+        </p>
+        <h2>
+            - Louis-Philippe Dalembert
+        </h2>
     </div>
-    <footer>
-
+    <footer class="footer">
+        <p>© 2023 Zile<span>Ayiti</span> All rights reserved.</p>
     </footer>
 </body>
 </html>
