--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon_package_v0.16/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon_package_v0.16/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon_package_v0.16/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/favicon_package_v0.16/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>ZileAyiti |Akey</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,23 +19,27 @@
     <header class="header">
         <div class="sub-header">
             <div class="logo">
-                <img src="palmier-removebg-preview.png" alt="">
+                <img src="IMAGES/palmier.png" alt="palmier">
                 Zile<span>Ayiti</span>
             </div>
             <div class="right-links">
                 <ul>
-                    <li><a href="#">Header link one</a></li>
-                    <li><a href="#">Header link two</a></li>
-                    <li><a href="#">Header link three</a></li>
+                    <li><a href="#">Discover Haiti</a></li>
+                    <li><a href="#">Haitian culture</a></li>
+                    <li><a href="#">Travel and adventure</a></li>
                 </ul>
             </div>
         </div>
         
         <div class="more">
             <div class="left-more">
-                <h1>This website is awasome!</h1>
-                <p>Possimus maxime dolor ullam. Itaque architecto blanditiis perferendis earum inventore, veniam explicabo voluptate illum? Eos quos, unde voluptatibus neque illo minima obcaecati!</p>
-                <button><a href="#">Sign up</a></button>
+                <h1>The True Face Of Haiti!</h1>
+                <p>
+                    Discover the rich culture, history and natural landscapes of 
+                    Haiti. Explore its magnificent beaches, its city life and its 
+                    historical treasures like the Citadelle Laferrière.
+                </p>
+                 <button><a href="#">Sign up</a></button>
             </div>
             <div class="right-more">
                 <img src="IMAGES/citadelle.webp" alt="citadelle" >
@@ -37,7 +48,7 @@
     </header>
     <!--Information section-->
     <div class="information">
-        <h1>Some random information.</h1>
+        <h1>Explore our cherie haiti the pearl of the Antilles</h1>
         <div class="container">
             <div class="box">
                 <img src="IMAGES/téléchargement.jpeg" alt="">
@@ -72,6 +83,22 @@
             - Louis-Philippe Dalembert
         </h2>
     </div>
+    <!-- Sign Up section -->
+    <div class="popup">
+        <div class="container">
+            <div class="sub-popup">
+                <h2>Call to Action!</h2>
+                <p>
+                    It's time to explore the beauty of Haiti. Sign up now to get exclusive access to our amazing content.
+                </p>
+            </div>
+            <div class="button">
+                <button><a href="#">Sign up</a></button>
+            </div>
+        </div>
+        
+    </div>
+
     <footer class="footer">
         <p>© 2023 Zile<span>Ayiti</span> All rights reserved.</p>
     </footer>
